fix for sidebar gap

--- a/docroot/sites/all/themes/drupalcampnj/css/drupalcampnj-alpha-default.css
+++ b/docroot/sites/all/themes/drupalcampnj/css/drupalcampnj-alpha-default.css
@@ -27,7 +27,7 @@ body.admin-menu {
   width: 278px;
   height: 176px;
   right: -12px;
-  top: 90px;
+  top: 94px;
   z-index: 10;
 }
 
